--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,36 +1,28 @@
-<div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}", name: "Phoenix!" %></h2>
-  <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
-</div>
+<div class="header"></div>
 
-<div class="row marketing">
-  <div class="col-lg-6">
-    <h4>Resources</h4>
-    <ul>
-      <li>
-        <a href="http://phoenixframework.org/docs/overview">Guides</a>
-      </li>
-      <li>
-        <a href="https://hexdocs.pm/phoenix">Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-    </ul>
+<div class="row">
+  <div class="col-lg-3"></div>
+  <div class="col-lg-3">
+    <div class="panel panel-default">
+      <div class="panel-heading text-center">
+        <h1 class="panel-title">Jenny</h1>
+      </div>
+      <div class="panel-body text-center">
+        <h2 class="daily-amount">$<%= daily_amount(@todays_data, :jenny) %></h2>/day
+      </div>
+    </div>
   </div>
 
-  <div class="col-lg-6">
-    <h4>Help</h4>
-    <ul>
-      <li>
-        <a href="http://groups.google.com/group/phoenix-talk">Mailing list</a>
-      </li>
-      <li>
-        <a href="http://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">@elixirphoenix</a>
-      </li>
-    </ul>
+  <div class="col-lg-3">
+    <div class="panel panel-default">
+      <div class="panel-heading text-center">
+        <h1 class="panel-title">Chris</h1>
+      </div>
+      <div class="panel-body text-center">
+        <h2 class="daily-amount">$<%= daily_amount(@todays_data, :chris) %></h2>/day
+      </div>
+    </div>
   </div>
-</div>
+
+  <div class="col-lg-3"></div>
+</div
