--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,14 +1,18 @@
-<div class="header"></div>
+<div class="header text-center">
+  <h1 class="panel-title">
+    <%= long_date(@today) %>
+  </h1>
+</div>
 
 <div class="row">
   <div class="col-lg-3"></div>
   <div class="col-lg-3">
     <div class="panel panel-default">
       <div class="panel-heading text-center">
-        <h1 class="panel-title">Jenny</h1>
+        <h2 class="panel-title">Jenny</h2>
       </div>
       <div class="panel-body text-center">
-        <h2 class="daily-amount">$<%= daily_amount(@todays_data, :jenny) %></h2>/day
+        <h3 class="daily-amount">$<%= daily_amount(@todays_data, :jenny) %></h3>/day
       </div>
     </div>
   </div>
@@ -16,10 +20,10 @@
   <div class="col-lg-3">
     <div class="panel panel-default">
       <div class="panel-heading text-center">
-        <h1 class="panel-title">Chris</h1>
+        <h2 class="panel-title">Chris</h2>
       </div>
       <div class="panel-body text-center">
-        <h2 class="daily-amount">$<%= daily_amount(@todays_data, :chris) %></h2>/day
+        <h3 class="daily-amount">$<%= daily_amount(@todays_data, :chris) %></h3>/day
       </div>
     </div>
   </div>
