--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -17,6 +17,12 @@
       <main role="main">
         <%= render @view_module, @view_template, assigns %>
       </main>
+
+      <div class="easter-egg">
+        <a href="/its-your-birfday">
+          <img class="" height="40px" src="<%= static_path(@conn, "/images/paw.png") %>">
+        </a>
+      </div>
     </div> <!-- /container -->
 
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
