--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -42,6 +42,11 @@ h6.panel-title {
   margin-right: 0.1em;
 }
 
+.info-widget {
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
 .easter-egg {
   position: fixed;
   left: 0px;
