Show goal as well.

--- a/web/templates/page/total_spent.html.eex
+++ b/web/templates/page/total_spent.html.eex
@@ -3,6 +3,6 @@
     <h3 class="panel-title">Total Spent</h3>
   </div>
   <div class="panel-body text-center">
-    <h3>$<%= currency(@spending[:total_spent]) %></h3>
+    <h3>$<%= currency(@spending[:total_spent]) %> of $<%= currency(@spending[:goal]) %></h3>
   </div>
 </div>
