--- a/web/templates/page/spending_left.html.eex
+++ b/web/templates/page/spending_left.html.eex
@@ -1,8 +1,8 @@
 <div class="panel panel-default info-widget">
   <div class="panel-heading text-center">
-    <h3 class="panel-title">Total Spent</h3>
+    <h3 class="panel-title">Spending Left</h3>
   </div>
   <div class="panel-body text-center">
-    <h3>$<%= currency(@spending[:total_spent]) %> of $<%= currency(@spending[:goal]) %></h3>
+    <h3>$<%= currency(@spending[:total_left]) %></h3>
   </div>
 </div>
